logs/mossh.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyChef-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/chef'...
Compiling './lib/python3.5/site-packages/chef/api.py'...
***   File "./lib/python3.5/site-packages/chef/api.py", line 187
    except urllib2.HTTPError, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chef/base.py'...
***   File "./lib/python3.5/site-packages/chef/base.py", line 109
    except ChefServerNotFoundError, e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chef/data_bag.py'...
***   File "./lib/python3.5/site-packages/chef/data_bag.py", line 120
    except ChefServerNotFoundError, e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chef/fabric.py'...
***   File "./lib/python3.5/site-packages/chef/fabric.py", line 12
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chef/tests'...
Compiling './lib/python3.5/site-packages/chef/tests/__init__.py'...
***   File "./lib/python3.5/site-packages/chef/tests/__init__.py", line 53
    except ChefError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chef/tests/test_fabric.py'...
***   File "./lib/python3.5/site-packages/chef/tests/test_fabric.py", line 21
    print MockSearch('role').data
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chef/utils'...
Listing './lib/python3.5/site-packages/mossh'...
Compiling './lib/python3.5/site-packages/mossh/__init__.py'...
***   File "./lib/python3.5/site-packages/mossh/__init__.py", line 73
    print logging.warning("Unable to log into following nodes because they do not have attribute %s:\%sn" % (args.a,", ".join(missing_node_names)))
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mossh-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
